--- a/index.html
+++ b/index.html
@@ -47,52 +47,19 @@
             </div>
         </div>
     </nav>
-
-    <!-- Hero Section -->
+    
     <section class="hero" id="inicio">
-        <img src="./assets/img/hero1.png" alt="Background" class="hero-background" id="heroBackground">
-
-        <div class="hero-svg">
-            <svg width="736" height="450" viewBox="0 0 736 451" fill="none" xmlns="http://www.w3.org/2000/svg">
-
-                <path
-                    d="M87.591 200.904C94.3878 160.381 94.591 151.906 157.089 121.908C219.587 91.9094 349.089 104.411 349.089 104.411C349.089 104.411 468.087 116.919 535.589 139.411C571.737 151.457 602.813 167.782 608.595 205.911C611.444 224.7 607.708 236.289 600.595 253.911C590.881 277.977 576.414 288.342 558.595 305.411C496.374 365.012 444.746 381.638 358.595 382.911C272.085 384.19 217.292 375.05 157.089 312.911C122.118 276.815 79.0759 251.673 87.591 200.904Z"
-                    fill="#B8798E" />
-
-                <!-- <path
-                    d="M133.137 309.435C137.731 321.662 134.382 335.282 128 346.678C114.5 370.786 95.099 386.616 58.5 389.327C31.5 391.327 0 363.95 0 328.327C3 292.827 24 268.327 65.4453 268.327C98.7357 272.333 124.289 285.887 133.137 309.435Z"
-                    fill="#B8798E" />
-                <circle cx="466.5" cy="69.8274" r="34" fill="#B8798E" /> -->
-
-                <a href="tel:+351963260200" class="svg-phone-button">
-                    <path
-                        d="M133.137 309.435C137.731 321.662 134.382 335.282 128 346.678C114.5 370.786 95.099 386.616 58.5 389.327C31.5 391.327 0 363.95 0 328.327C3 292.827 24 268.327 65.4453 268.327C98.7357 272.333 124.289 285.887 133.137 309.435Z"
-                        fill="#B8798E" />
-                    <image x="40" y="305" width="50" height="50" href="./assets/img/Phone Calling Rounded.svg" />
-                </a>
-
-                <a href="cats_grid.html" class="svg-button-1">
-                    <path
-                        d="M534.083 101.265C526.244 89.5487 520.374 81.5667 516.789 74.2558C508.833 58.0329 520.489 38.9316 538.147 35.1058C552.863 31.9178 571.319 32.369 590.525 35.3677C641.02 47.5932 665.858 63.7039 694.218 102.199C699.81 109.79 704.008 118.335 706.981 127.282C710.103 136.676 711.672 143.068 709.754 149.732C705.993 160.586 702.315 166.73 691.572 171.638C686.567 173.924 681.109 175.045 675.644 175.688C659.298 177.612 648.298 177.09 633.946 175.552C627.227 174.832 620.602 173.353 614.198 171.195C601.93 167.061 592.727 163.477 582.475 156.437C577.043 152.707 572.452 147.911 568.266 142.823L534.083 101.265Z"
-                        fill="#B8798E" />
-                    <text x="600" y="112" fill="white" text-anchor="middle" font-family="Quicksand, sans-serif"
-                        font-size="32" font-weight="600" transform="rotate(28 600 115)">Ver Gatos</text>
-                </a>
-
-                <a href="cats_grid.html" class="svg-button-2">
-                    <path
-                        d="M519.5 347.828C507.022 354.408 497.942 358.722 491.184 363.388C475.731 374.056 477.283 397.281 492.069 408.856C504.1 418.275 521.122 426.229 540 432.329C592.726 444.818 623.434 441.898 668.413 420.571C676.826 416.582 684.49 411.143 691.308 404.803C698.911 397.732 703.55 392.735 705 385.828C706.746 374.398 706.283 367.234 698.591 357.847C695.127 353.619 690.766 350.213 686.192 347.222C671.674 337.728 661.125 333.099 646.717 327.712C640.603 325.426 634.252 323.804 627.797 322.832C613.869 320.735 603.383 319.599 589.958 321.274C583.631 322.064 577.53 324.046 571.63 326.464L519.5 347.828Z"
-                        fill="#B8798E" />
-                    <text x="590" y="394" fill="white" text-anchor="middle" font-family="Quicksand, sans-serif"
-                        font-size="32" font-weight="600">Ver Gatos</text>
-                </a>
-
-                <circle cx="432.5" cy="416.827" r="34" fill="#B8798E" />
-            </svg>
-        </div>
-
-        <div class="hero-title">
-            <h1>AMIGATOS DA<br>MILKINHA</h1>
+        <img src="./assets/img/hero.png" alt="Gatos do abrigo Amigatos da Milkinha" class="hero-bg-image" />
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title">Cada gato merece<br>um lar cheio de amor</h1>
+                <p class="hero-text">Criamos um ambiente seguro e acolhedor onde cada felino recebe cuidado, carinho e a
+                    oportunidade de encontrar sua família para sempre.</p>
+                <div class="hero-buttons">
+                    <a href="tel:+351963260200" class="hero-phone">+351 963 260 200</a>
+                    <a href="cats_grid.html" class="hero-cta">Ver Nossos Gatos</a>
+                </div>
+            </div>
         </div>
     </section>
 
