--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Portuguese SEO -->
+    <meta name="description" content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
+    <meta name="keywords" content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
+    <meta property="og:title" content="Amigatos da Milkinha - Abrigo de Gatos">
+    <meta property="og:description" content="Cada gato merece amor. 42 gatos procuram um lar para sempre.">
+    <meta property="og:image" content="./assets/img/hero.png">
+    <meta property="og:url" content="https://amigatosdamilkinha.pt">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pt_PT">
     <title>Amigatos da Milkinha - Abrigo de Gatos</title>
 
     <link rel="icon" href="./logo.png">
@@ -52,7 +62,7 @@
         <img src="./assets/img/hero.png" alt="Gatos do abrigo Amigatos da Milkinha" class="hero-bg-image" />
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Cada gato merece<br>um lar cheio de amor</h1>
+                <h1 class="hero-title">Cada gato <br>merece amor</h1>
                 <p class="hero-text">Criamos um ambiente seguro e acolhedor onde cada felino recebe cuidado, carinho e a
                     oportunidade de encontrar sua família para sempre.</p>
                 <div class="hero-buttons">
@@ -251,37 +261,37 @@
             <h2 class="fade-in">Como Você Pode Ajudar</h2>
             <div class="services-grid">
                 <div class="service-card fade-in">
-                    <span class="service-icon">🏠</span>
+                    <!-- <span class="service-icon">🏠</span> -->
                     <h3>Adoção</h3>
                     <p>Dê um lar permanente a um dos nossos gatos. Cada adoção salva duas vidas - a do gato adotado e
                         cria espaço para outro em necessidade.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <span class="service-icon">❤️</span>
+                    <!-- <span class="service-icon">❤️</span> -->
                     <h3>Doações</h3>
                     <p>Suas doações financeiras nos ajudam a cobrir custos veterinários, alimentação e cuidados diários
                         dos nossos amigos felinos.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <span class="service-icon">🤝</span>
+                    <!-- <span class="service-icon">🤝</span> -->
                     <h3>Voluntariado</h3>
                     <p>Junte-se à nossa equipe de voluntários dedicados. Ajude com limpeza, alimentação, socialização e
                         muito mais.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <span class="service-icon">🎁</span>
+                    <!-- <span class="service-icon">🎁</span> -->
                     <h3>Doação de Itens</h3>
                     <p>Precisamos de ração, areia sanitária, medicamentos, brinquedos e outros suprimentos para manter
                         nossos gatos felizes e saudáveis.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <span class="service-icon">🏡</span>
+                    <!-- <span class="service-icon">🏡</span> -->
                     <h3>Lar Temporário</h3>
                     <p>Torne-se uma família de acolhimento temporário para gatos que precisam de cuidados especiais ou
                         socialização extra.</p>
                 </div>
                 <div class="service-card fade-in">
-                    <span class="service-icon">📢</span>
+                    <!-- <span class="service-icon">📢</span> -->
                     <h3>Divulgação</h3>
                     <p>Ajude-nos a divulgar nosso trabalho nas redes sociais e encontrar famílias para nossos gatos
                         especiais.</p>
