--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="stats" id="stats">
         <div class="stats-container">
             <div class="stat-item fade-in">
-                <img src="./assets/img/paw1.svg" alt="Paw" class="paw-svg">
+                <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">42</span>
                     <span class="stat-label">Gatos Disponíveis</span>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="stat-item fade-in">
-                <img src="./assets/img/paw1.svg" alt="Paw" class="paw-svg">
+                <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">200+</span>
                     <span class="stat-label">Gatos Adotados</span>
@@ -93,7 +93,7 @@
             </div>
 
             <div class="stat-item fade-in">
-                <img src="./assets/img/paw1.svg" alt="Paw" class="paw-svg">
+                <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">5</span>
                     <span class="stat-label">Anos de Experiência</span>
