--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Portuguese SEO -->
-    <meta name="description" content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
-    <meta name="keywords" content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
+    <meta name="description"
+        content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
+    <meta name="keywords"
+        content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
     <meta property="og:title" content="Amigatos da Milkinha - Abrigo de Gatos">
     <meta property="og:description" content="Cada gato merece amor. 42 gatos procuram um lar para sempre.">
     <meta property="og:image" content="./assets/img/hero.png">
@@ -44,7 +46,6 @@
                 <li><a href="#ajudar" class="btn btn-secondary nav-btn-wide">Ajudar</a></li>
                 <div class="language-switcher">
                     <a href="./en/index.html" class="language-btn" title="Switch to English">
-                        <img src="./assets/img/language-circle.svg" alt="Language" class="language-icon">
                         <span class="language-text">EN</span>
                     </a>
                 </div>
@@ -57,7 +58,7 @@
             </div>
         </div>
     </nav>
-    
+
     <section class="hero" id="inicio">
         <img src="./assets/img/hero.png" alt="Gatos do abrigo Amigatos da Milkinha" class="hero-bg-image" />
         <div class="hero-container">
