--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         </div>
     </nav>
 
+    <!-- =====================================================
+    Hero Section
+    ===================================================== -->
     <section class="hero" id="inicio">
         <img src="./assets/img/hero.png" alt="Gatos do abrigo Amigatos da Milkinha" class="hero-bg-image" />
         <div class="hero-container">
@@ -74,7 +77,9 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
+    <!-- =====================================================
+    Stats Section
+    ===================================================== -->
     <section class="stats" id="stats">
         <div class="stats-container">
             <div class="stat-item fade-in">
@@ -103,7 +108,9 @@
         </div>
     </section>
 
-    <!-- Cats Carousel Section -->
+    <!-- =====================================================
+    Cats Carousel Section
+    ===================================================== -->
     <section class="cats-carousel">
         <div class="cats-carousel-container">
             <h2 class="fade-in">Conheça Alguns dos Nossos Amigatos</h2>
@@ -237,7 +244,9 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- =====================================================
+    About Section
+    ===================================================== -->
     <section class="about" id="sobre">
         <div class="about-container">
             <div class="about-content fade-in">
@@ -256,7 +265,9 @@
         </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- =====================================================
+    Services Section
+    ===================================================== -->
     <section class="services" id="servicos">
         <div class="services-container">
             <h2 class="fade-in">Como Você Pode Ajudar</h2>
@@ -300,6 +311,114 @@
             </div>
         </div>
     </section>
+
+    <!-- =====================================================
+    FAQ Section
+    ===================================================== -->
+
+    <section class="faq-section">
+        <div class="container">
+            <div class="section-header">
+                <h2>Perguntas <span>Frequentes</span></h2>
+                <p class="section-subheading">Informações importantes sobre gatos com condições especiais que procuram
+                    um lar amoroso</p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <h3>O que é <span class="virus-name">FIV Positivo</span>?</h3>
+                        <span class="accordion-icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>
+                            <strong class="virus-name">FIV (Vírus da Imunodeficiência Felina)</strong> é um vírus que
+                            afeta o sistema imunitário dos gatos, semelhante ao HIV em humanos, mas que <strong>não é
+                                transmissível para pessoas ou outros animais</strong>.
+                        </p>
+
+                        <div class="highlight-box">
+                            <div class="highlight-title">Como é transmitido?</div>
+                            <p>A transmissão ocorre principalmente através de mordidas profundas durante brigas entre
+                                gatos. Não se transmite por partilha de comida, água, ou contacto casual.</p>
+                        </div>
+
+                        <p>
+                            Gatos FIV+ podem viver vidas longas e saudáveis com cuidados adequados. Muitos vivem anos
+                            sem apresentar sintomas, especialmente quando mantidos em ambiente seguro e sem stress.
+                        </p>
+
+                        <div class="important-note">
+                            <strong>Importante:</strong> Gatos FIV+ devem preferencialmente viver em casas sem outros
+                            gatos, ou com gatos também FIV+, para evitar transmissão e reduzir o risco de infeções.
+                        </div>
+
+                        <p>
+                            Com amor, cuidados veterinários regulares e um ambiente tranquilo, estes gatos especiais
+                            podem ser companheiros maravilhosos e leais.
+                        </p>
+                    </div>
+                    <div class="divider"></div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <h3>O que é <span class="virus-name">FeLV Positivo</span>?</h3>
+                        <span class="accordion-icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>
+                            <strong class="virus-name">FeLV (Vírus da Leucemia Felina)</strong> é um vírus que afeta o
+                            sistema imunitário e pode causar diversos problemas de saúde nos gatos. Tal como o FIV,
+                            <strong>não é transmissível para humanos</strong>.
+                        </p>
+
+                        <div class="highlight-box">
+                            <div class="highlight-title">Como é transmitido?</div>
+                            <p>Transmite-se através de contacto próximo: saliva, secreções nasais, urina, fezes, e
+                                através da mãe para os filhotes. É mais contagioso que o FIV entre gatos.</p>
+                        </div>
+
+                        <p>
+                            Embora seja uma condição mais complexa que o FIV, muitos gatos FeLV+ podem ter qualidade de
+                            vida boa durante meses ou anos, especialmente com cuidados veterinários apropriados.
+                        </p>
+
+                        <div class="important-note">
+                            <strong>Muito importante:</strong> Gatos FeLV+ devem viver isolados de outros gatos não
+                            infectados, pois o vírus é altamente contagioso entre felinos.
+                        </div>
+
+                        <p>
+                            Estes gatos precisam de cuidados especiais, incluindo consultas veterinárias mais
+                            frequentes, ambiente sem stress, e muito amor. Podem proporcionar imenso carinho e alegria
+                            aos seus tutores.
+                        </p>
+                    </div>
+                    <div class="divider"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const accordionItems = document.querySelectorAll('.accordion-item');
+            accordionItems.forEach(item => {
+                const header = item.querySelector('.accordion-header');
+                header.addEventListener('click', () => {
+                    // Close all items
+                    accordionItems.forEach(otherItem => {
+                        if (otherItem !== item && otherItem.classList.contains('active')) {
+                            otherItem.classList.remove('active');
+                        }
+                    });
+                    // Toggle current item
+                    item.classList.toggle('active');
+                });
+            });
+        });
+    </script>
 
     <!-- Contact Section -->
     <section class="contact" id="contato">
