--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Perguntas <span>Frequentes</span></h2>
+                <div class="underline"></div>
                 <p class="section-subheading">Informações importantes sobre gatos com condições especiais que procuram
                     um lar amoroso</p>
             </div>
@@ -340,22 +341,26 @@
                         <div class="highlight-box">
                             <div class="highlight-title">Como é transmitido?</div>
                             <p>A transmissão ocorre principalmente através de mordidas profundas durante brigas entre
-                                gatos. Não se transmite por partilha de comida, água, ou contacto casual.</p>
+                                gatos. O contacto casual, como partilhar comida, água, ou brincadeiras, é muito
+                                improvável de causar transmissão.</p>
                         </div>
 
                         <p>
                             Gatos FIV+ podem viver vidas longas e saudáveis com cuidados adequados. Muitos vivem anos
                             sem apresentar sintomas, especialmente quando mantidos em ambiente seguro e sem stress.
+                            Estudos recentes mostram que gatos com FIV têm expectativas de vida próximas aos gatos não
+                            infectados.
                         </p>
 
                         <div class="important-note">
-                            <strong>Importante:</strong> Gatos FIV+ devem preferencialmente viver em casas sem outros
-                            gatos, ou com gatos também FIV+, para evitar transmissão e reduzir o risco de infeções.
+                            <strong>Importante:</strong> No abrigo, os gatos FIV+ vivem junto com gatos não infectados
+                            sem problemas, pois todos são castrados e a maioria não é agressiva, o que reduz muito o
+                            risco de transmissão. Em casa, o risco é igualmente baixo com gatos castrados e calmos.
                         </div>
 
                         <p>
                             Com amor, cuidados veterinários regulares e um ambiente tranquilo, estes gatos especiais
-                            podem ser companheiros maravilhosos e leais.
+                            podem ser companheiros maravilhosos e leais por muitos anos.
                         </p>
                     </div>
                     <div class="divider"></div>
@@ -376,17 +381,22 @@
                         <div class="highlight-box">
                             <div class="highlight-title">Como é transmitido?</div>
                             <p>Transmite-se através de contacto próximo: saliva, secreções nasais, urina, fezes, e
-                                através da mãe para os filhotes. É mais contagioso que o FIV entre gatos.</p>
+                                através da mãe para os filhotes. É mais facilmente transmissível que o FIV entre gatos.
+                            </p>
                         </div>
 
                         <p>
                             Embora seja uma condição mais complexa que o FIV, muitos gatos FeLV+ podem ter qualidade de
-                            vida boa durante meses ou anos, especialmente com cuidados veterinários apropriados.
+                            vida boa durante meses ou anos, especialmente com cuidados veterinários apropriados. O tempo
+                            médio de sobrevivência após diagnóstico é de 2,5 anos, mas pode ser muito maior em alguns
+                            casos.
                         </p>
 
                         <div class="important-note">
-                            <strong>Muito importante:</strong> Gatos FeLV+ devem viver isolados de outros gatos não
-                            infectados, pois o vírus é altamente contagioso entre felinos.
+                            <strong>Muito importante:</strong> Gatos FeLV+ podem interagir com gatos não infectados
+                            desde que estes estejam vacinados contra a doença. Recentemente, tivemos um gato FeLV+ que
+                            foi adotado com sucesso! A vacinação oferece proteção eficaz, embora não seja 100%
+                            garantida.
                         </div>
 
                         <p>
