--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <!-- Portuguese SEO -->
     <meta name="description"
-        content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
+    content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
     <meta name="keywords"
-        content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
+    content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
     <meta property="og:title" content="Amigatos da Milkinha - Abrigo de Gatos">
     <meta property="og:description" content="Cada gato merece amor. 42 gatos procuram um lar para sempre.">
     <meta property="og:image" content="./assets/img/hero.png">
@@ -86,7 +86,7 @@
                 <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">42</span>
-                    <span class="stat-label">Gatos Disponíveis</span>
+                    <span class="stat-label">Gatos <br>Disponíveis</span>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                 <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">200+</span>
-                    <span class="stat-label">Gatos Adotados</span>
+                    <span class="stat-label">Gatos<br> Adotados</span>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                 <div class="paw-svg" aria-label="Paw"></div>
                 <div class="stat-content">
                     <span class="stat-number">5</span>
-                    <span class="stat-label">Anos de Experiência</span>
+                    <span class="stat-label">Anos de<br>Experiência</span>
                 </div>
             </div>
         </div>
